mule-user-guide/v/3.6/building-a-mapping-flow-in-the-graphical-mapping-editor.adoc
= 在图形映射编辑器中构建映射流程
:keywords: datamapper

在Mule ESB 3.x的所有当前和未来版本中，DataMapper将继续得到完全支持，但它将在Mule 4.0中被删除。我们建议，如果您想利用 link:/mule-user-guide/v/3.8/dataweave[DataWeave]的新功能，或者如果您启动新项目，请立即升级。但是，如果您没有迫切需要利用新功能，我们建议您等到Mule 4.0发布。


Anypoint DataMapper的图形映射编辑器允许您通过以下方式构建转换：

* 从映射流的输入和输出的定义元数据开始，如 link:/mule-user-guide/v/3.6/defining-datamapper-input-and-output-metadata[定义DataMapper输入和输出元数据]中所述

* 定义一个或多个元素映射，将输入元素作为源链接到作为目标的输出元素

* 对于每个元素映射，写入转换，从输入中获取属性和子元素，并计算输出元素的值。

图形映射编辑器简化了多元素映射和相关变换代码的管理和可视化。

== 使用元素映射

数据映射编辑器窗口包含*Element Mapping*指标和控件。 *Element* *Mapping*显示当前在图形映射编辑器中选择并可见的元素映射。如果有多个元素映射，它允许您在映射之间进行选择。

每次将输入结构映射到输出结构时，这些元素之间的映射都将添加到此列表中。当您想要处理结构中的子元素映射时，必须先选择连接父元素的当前元素映射。

例如，在下面的图片中，*Element Mapping*下拉菜单显示三个映射：

image:a1.png[A1]

在这个例子中，*staff*是输入文件的根元素; *employee*和*manager*以及包含自己属性和集合的子元素。有关如何映射这些输入结构以及如何映射其中的子元素的详细信息，请参见下文。

=== 识别可用于映射的元素

准备将元素从输入映射到输出时，特定元素是否可映射取决于编辑器视图中当前选定的元素映射。对于多重嵌套结构，您可能必须将父元素从输入映射到输出，然后才能映射它们的后代。

选择当前元素映射后，那些可用于在源和目标中映射的元素将以粗体显示。例如，考虑使用DataMapper从员工和经理列表构建联系人电话列表。

_employee_和_manager_元素集合是粗体的，表示它们可以映射到输出窗格。选择元素映射"Foreach 'manager' -> 'contact'"会显示一组不同的可映射元素。

在输入和输出窗格中，可用于映射的节点和属性在*bold*中突出显示：

* 在输出窗格中，突出显示根节点*contact*
* 在输入窗格中，突出显示*manager*节点及其子元素，包括直接位于其下的属性（*name*，*lastname*等）和集合元素{ {4}}，*details*和*history*）。 *position*，*details*和*history*节点下的子元素呈灰色并且不可用。为了映射它们，你必须首先映射它们的父节点

在某些情况下，映射单个字段可能需要编写一个表达式，该表达式使用可用的输入字段来定义输出字段的值。在这种情况下，您需要了解当前映射级别的哪些字段可用。

您可以使用输入或输出窗格中的*Eye*（隐藏/显示无关元素）按钮来切换输入和输出元素的显示，但不适合进行映射。

* 关闭时，该图标将隐藏输入窗格中当前显示的映射级别中不可映射的所有元素。

* 打开时， image:eye_open.png[eye_open]显示输入映射窗格中未折叠的所有元素，无论您是否可以将它们映射到当前映射级别。

=== 创建元素映射

您可以通过以下两种方式之一创建映射元素：

* 通过单击图形映射编辑器中的“添加映射”图标并指定名称，输入和输出数据元素和（对于结构化数据）将应用于输入的可选过滤器表达式;
* 通过将输入数据元素拖动到输出数据元素。元素映射名称是根据源名称和目标名称自动生成的。没有定义过滤器，尽管如果源是结构化数据，您可以编辑元素映射以添加一个过滤器。

新元素映射显示在当前元素映射控件中。

元素映射控件通过将"Foreach"插入到每个元素映射的生成名称中来表达元素映射对输入进行迭代的想法。此标签仅用于提醒，但您可以编辑名称以删除此名称。

=== 编辑元素映射

要编辑元素映射，请在元素映射下拉列表中选择映射，然后单击编辑映射图标。出现Edit Mapping对话框：

image:3.png[3.png]

在此处为*Name*输入所需值，对于结构化数据，输入XPath筛选器*Condition*。

=== 设置元素映射XPath过滤器

对于结构化数据，您可以定义一个计算为布尔值的XPath表达式，以仅选择表达式为true的输入。 （此功能在SQL表达式中提供了类似WHERE子句的内容。）

XPath语法适用于所有类型的结构化数据（包括POJO，JSON和键值映射）。通常，受支持的XPath包含可用于选择器的任何XPath条件。例如：

[%autowidth.spread]
|===
|测试是否存在属性 | @ phone
|根据字符串文字测试属性 | @ gender ='M'
|根据正则表达式 |匹配（@phone，'[0-9] +'）测试属性手机
|===

过滤可用于提供一些基本的数据验证，或者在相同的输入数据上定义单独的元素映射，以根据它们匹配的过滤器对不同的记录进行不同的处理。

== 在图形映射编辑器中设计变换

一旦定义了元素映射，就可以设计与该元素映射关联的变换。您可以：

* 使用脚本表达式或使用基于XPath的规则，通过拖放将源数据映射到目标数据
* 将输入参数添加到您的数据映射中
* 创建或连接到查找表

=== 拖放字段映射

* 当您首次将某个元素从输入拖放到输出时，输入和输出中具有匹配名称和类型的所有字段都将自动为您映射。这称为_automapping_，当处理大量字段和有限元数据的大型复杂映射时，它可以节省时间和精力。
* 如果您将第二个源字段拖动到已具有指定脚本的目标，则新值将连接到旧的字段。

无论哪种情况，DataMapper都会为输出字段创建一个称为分配脚本的表达式。

[NOTE]
====
*Default Scripting Language for Assigned Scripts*

根据您的默认脚本语言，分配的脚本表达式可以使用Mule表达式语言（默认）或CTL2（Mule 3.4之前的唯一可用转换语言）。 MuleSoft建议将来使用MEL，因为它是Mule ESB其余部分使用的表达式语言，它与Mule ESB的其余部分比CTL2更好地集成在一起，并且它将继续使用Mule ESB进行积极开发。

为了向后兼容，将支持CTL2。如果您有某些特定要求，可以将默认脚本语言更改为CTL2。有关更改默认脚本语言的详细信息，请参阅 link:/mule-user-guide/v/3.6/choosing-mel-or-ctl2-as-scripting-engine[选择MEL或CTL2作为脚本引擎]。
====

要查看输出字段的指定脚本，请单击DataMapper的“输出”窗格中的字段名称。表达式显示在“输出”窗格下的文本框中。

image:4.png[4] +

在上面的示例中，输出字段`name`的值是由以下内容组成的字符串：

* 输入字段`lastname`
* 逗号
* 一个空格
* 输入字段`name`
* 一个空格
* 字符串`(mgr)`

得到的值是字符串`Larson, Larry (mgr)`，您可以在*name*字段旁看到该字符串。

=== 直接编写分配的脚本表达式

直接编写指定的脚本表达式允许您手动映射字段或修改现有映射。如果您所做的不仅仅是数据字段的基本复制和连接，您可能需要为输出字段编写或修改分配的脚本。

一种实用的技术是将输入字段拖到输出以获取引用输入的代码，然后使用熟悉的操作符和选定表达式语言中的一组内置函数编写表达式的其余部分。例如，在将输入字段拖动到输出后，可以编辑输出窗格底部的已分配脚本框，如上例所示。

您也可以选择*Script*视图来编辑整个映射的脚本：

image:5.png[五]

与图形视图一样，脚本视图允许您使用*Element Mapping*下拉菜单查看所需的映射级别。

编辑提供了几种类型的支持：

* 自动完成，包括输入和输出字段，变量和函数
* 在撰写脚本时进行实时错误检查
*  MEL和CTL2的语法高亮显示
* 从左窗格中的映射输入和输出，规则和函数树拖放到右窗格中的代码


*Effects of Editing in Script View*

* 请勿编辑由Anypoint Studio自动插入到脚本中的注释以及管理id和parent_id值的语句。更改代码的这些部分可能会导致不可预知的结果。

* 可以构建一个语法正确和有效的脚本，这些脚本太复杂，无法翻译回图形视图。在这种情况下，您将失去切换到此元素映射的图形视图的能力。


=== 使用规则从复杂结构化数据中提取字段

DataMapper中的规则允许您将XPath选择器应用于结构化输入数据，并使结果可用于转换输出。

规则最常见的用例是将数据从树结构（例如特别复杂的XML或JSON文档）提取到像CSV这样的扁平结构。通过映射嵌套结构和元素映射，大多数用于将结构化输入数据映射到结构化目标的用例更容易处理。但是，可以使用规则来避开映射多个映射级别以仅从结构中提取几个节点的需要。

==== 创建规则

要创建规则，请在输入窗格中执行以下操作之一：

* 点击加号图标+并选择*Add Rule*

*  Cluck *Rules*，然后选择*Add Rule*
+
image:6.png[6]

出现新规则对话框。

在输入中使用*  *Name*来引用此规则。

*  *Type*设置规则返回的值的类型。这可以是基本的数据类型（字符串，日期，布尔值或任何数字类型）或基本数据类型的列表。

*  *Context*是一个XPath表达式，用于标识此元素映射的顶级输入元素。它是相对于XPath选择器将被评估的节点。请注意，您无法在规则中编辑此值，您只能通过选择新的元素映射并在其下创建规则来为其他上下文创建规则。

*  *XPath*是相对于上下文计算的表达式，用于从Rule中返回输出值。规则中可以使用任何可用于选择器的XPath表达式。屏幕截图中显示的示例：从第一个`/staff/employees`节点提取电话号码属性，该节点的电话号码由一系列数字和空格组成。 *Target Field*指定将XPath表达式返回的值分配给的输出字段。

[source, code, linenums]
----
/staff/employees[matches(@phone,"^[0-9][0-9\s]*$")[1]/@phone
----

请注意，无论使用何种类型的结构化数据，规则中都会使用XPath语法。对于其他结构化数据类型，XPath表达式将以类似于XML的方式进行解释。

==== 编辑规则

在输入窗格中，右键单击一个规则，然后选择*Edit*。出现编辑对话框：

image:7.png[7]

您可以在此更新规则的定义。但请注意，您无法更改规则的目标输出字段。

有关使用规则的更广泛示例，请参阅 link:/mule-user-guide/v/3.6/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper平面到结构化和结构化到平面的映射]中的"Structured-to-Flat Data Mapping"示例。

== 使用数据映射输入和输出参数

DataMapper输入参数使您能够在映射中包含动态信息（例如Mule变量或函数的值）。

参数可引用通过Mule表达式语言（MEL）获得的任何信息，包括消息和标题属性，文件名等。有关详细信息，请参阅 link:/mule-user-guide/v/3.6/non-mel-expressions-configuration-reference[非MEL表达式配置参考]。

[NOTE]
====
*Input Arguments and MEL Support*

如果使用MEL作为DataMapper的脚本语言，则可以在整个映射流程定义中直接使用MEL表达式。因此，在大多数情况下直接在代码中引用MEL表达式可能会更简单。但是，如果您的映射使用CTL2脚本，则不能在脚本中使用MEL表达式，因此参数是将信息传入和传出映射流的主要方式。
====

=== 定义输入或输出参数

要为映射定义输入或输出参数，请使用以下步骤：

. 单击Message Flow画布下方的DataMapping选项卡，以在Input窗格中显示Input arguments元素（右下方突出显示）。
+
image:8.png[8]

. 右键单击*Input arguments*，然后选择*Add Input argument*。新建输入参数对话框打开。
+
输入参数可以是字符串，日期，布尔值或任何数字类型。
+
image:9.png[9]
+
如果您使用默认的MEL进行脚本编写，则参数可以是Java对象，在这种情况下会提示您输入对象的类。
+
image:10.png[10]

在*Mule expression*字段中，输入将提供输入参数值的Mule表达式语言表达式。您可以使用任何在流程上下文中逻辑上有效且与所选类型匹配的Mule表达式。对于*Class*，如果适用，请浏览或键入对象类的名称。

完成后点击*OK*。

输入参数然后可用作映射和转换的输入，如以下屏幕截图所示：

image:11.png[11]

== 映射中的查找表

查找表便于在查找表定义的基础上从一个值映射到另一个值。有几种可能的应用：

* 如果一种格式使用1,2,3定义优先级，而另一种格式使用L，M，H，则可以使用查找表将1映射到L，2映射到M，3映射到H.

* 您可以根据查找中检索的数据来丰富或更正记录，例如，获取邮政编码并查找城市和州或省信息以完成记录。

* 您可以调用实现业务流程的流作为查找 - 例如，您可以将客户的姓名，地址等作为输入，并将其传递给查找流程，该查找流程可以查找客户的账户记录或生成新的客户帐户，然后返回用于DataMapper的帐户ID和其他帐户详细信息。

您可以通过右键单击映射面板中的Lookup Tables项来添加查找表（请参见下文）。 DataMapper支持查找表数据的四个来源：

*  **User-defined**：这种简单类型的查找表提供了一个输入区域，您可以在其中手动创建带有一个或多个字段的键控数据表。这些字段被定义为提取或检索值的唯一键。

*  *CSV*：这种类型的查找表使用分隔文件为查找提供数据。

*  *Database Lookup*：使用外部JDBC数据源进行查找。

*  *FlowRef Lookup*：调用Mule流，然后使用流的输出作为查找的源。
+
image:12.png[12]

有关在映射中使用查找表的完整详细信息，请参阅 link:/mule-user-guide/v/3.6/using-datamapper-lookup-tables[使用DataMapper查找表]。

== 另请参阅

* link:https://blogs.mulesoft.com/dev/mule-dev/7-things-you-didn%E2%80%99t-know-about-datamapper/[MuleSoft博客]
